# FoundryVision

./: README.md  config.py  fv_config.h  fv_telemetry.cc  fv_wifi.c  index.html  llm.py  logger.py  main_functions.cc  receiver.py  server.py  setup.ps1  system.txt
ESP Side/: CMakeLists.txt  FLASH.md  fv_config.h  fv_telemetry.cc  fv_telemetry.h  fv_wifi.c  fv_wifi.h  idf_component.yml  main_functions.cc
ESP Side/mnt/user-data/outputs/FoundryVision_esp/: CMakeLists.txt
